tests/additional/fail/op_streq.mvm
string x;
string y;
string z;

x = 'abc';
y = 'def';
z = 'abc';

print(x == y);
print(x == z);
